<resources>
    <string name="app_name">VacanciesTest</string>
    <string name="search">Поиск</string>
    <string name="favorites">Избранное</string>
    <string name="responses">Отклики</string>
    <string name="messages">Сообщения</string>
    <string name="profile">Профиль</string>
    <string name="error_loading_data">Ошибка при загрузке данных</string>
    <string name="retry">Повторить попытку</string>
    <string name="published">Опубликовано "%1$s"</string>
    <string name="vacancies_for_you">Вакансии для вас</string>
    <string name="app_not_found">Не найдено приложение</string>
    <string name="response">Откликнуться</string>
    <string name="job_search">Поиск работы</string>
    <string name="next">Продолжить</string>
    <string name="enter_with_password">Войти с паролем</string>
    <string name="employees_search_description">Размещение вакансий и доступ к базе резюме</string>
    <string name="search_employees">Я ищу сотрудников</string>
    <string name="employees_search">Поиск сотрудников</string>
    <string name="email">e-mail</string>
    <string name="error_email">Введите корректный e-mail</string>
    <string name="sent_code_title">Отправили код на "%1$s"</string>
    <string name="sent_code_description">Напишите его, чтобы подтвердить, что это вы, а не кто-то другой входит в личный кабинет</string>
    <string name="confirm">Подтвердить</string>
    <string name="asterisk">*</string>

    <plurals name="looking_now_persons">
        <item quantity="one">Сейчас просматривает %1$d человек</item>
        <item quantity="few">Сейчас просматривают %1$d человека</item>
        <item quantity="many">Сейчас просматривают %1$d человек</item>
        <item quantity="other">Сейчас просматривают %1$d человек</item>
    </plurals>

    <plurals name="vacancies_count">
        <item quantity="one">%d вакансия</item>
        <item quantity="few">%d вакансии</item>
        <item quantity="many">%d вакансий</item>
        <item quantity="other">%d вакансий</item>
    </plurals>

    <plurals name="more_vacancies_count">
        <item quantity="one">Ещё %1$d вакансия</item>
        <item quantity="few">Ещё %1$d вакансии</item>
        <item quantity="many">Ещё %1$d вакансий</item>
        <item quantity="other">Ещё %1$d вакансий</item>
    </plurals>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more_vacancies">Ещё вакансии</string>
    <string name="search_hint">Должность, ключевые слова</string>
    <string name="by_correspondence">По соответствию</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="position_on_corresponding_vacancies">Должность по подходящим вакансиям</string>
</resources>