<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.main.more.MoreVacanciesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/data_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_layout"
            style="@style/TextInputLayoutStyle"
            app:errorEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintEnd_toStartOf="@id/filter_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_back"
            app:startIconTint="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_half">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_edit_text"
                style="@style/TextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:fontFamily="@font/sf_pro_display_regular"
                android:hint="@string/position_on_corresponding_vacancies"
                android:inputType="textUri"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:textColorHint="@color/grey3"
                android:textSize="@dimen/text1" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/filter_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="@dimen/edit_text_height"
            android:layout_height="@dimen/edit_text_height"
            android:layout_margin="@dimen/margin_default"
            android:background="@drawable/rounded_rectangle_grey2"
            android:src="@drawable/ic_filter" />

        <TextView
            android:id="@+id/count_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_one_and_half"
            android:layout_marginStart="@dimen/margin_default"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/white"
            android:textSize="@dimen/text1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_layout"
            tools:text="Опубликовано 20 февраля" />

        <TextView
            android:id="@+id/sort_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/blue"
            android:textSize="@dimen/text1"
            android:layout_marginEnd="@dimen/margin_6"
            app:layout_constraintEnd_toStartOf="@id/sort_image_view"
            app:layout_constraintTop_toTopOf="@id/count_text_view"
            android:text="@string/by_correspondence" />

        <ImageView
            android:id="@+id/sort_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_half"
            android:src="@drawable/ic_sort"
            android:layout_marginEnd="@dimen/margin_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/count_text_view"
            app:layout_constraintBottom_toBottomOf="@+id/count_text_view"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/count_text_view"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingStart="@dimen/margin_default"
            android:paddingTop="@dimen/margin_default"
            android:paddingEnd="@dimen/margin_default"
            tools:listitem="@layout/item_vacancy" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <ProgressBar
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/green" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/error_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <TextView
            android:id="@+id/error_text_view"
            app:layout_constraintBottom_toTopOf="@id/retry_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="@string/error_loading_data"
            android:textColor="@color/white"
            android:textSize="@dimen/title1" />

        <FrameLayout
            android:id="@+id/retry_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rectangle_green"
            android:padding="@dimen/margin_default">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/retry"
                android:textColor="@color/white"
                android:textSize="@dimen/title2" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>